# SpaceDementia

./: .gitignore  README.md
SpaceDementia/: .gitignore  CLAUDE.md  README.md  build_exe.txt  diagram.puml  logs.txt  pu.sh  pyproject.toml
SpaceDementia/assets/: README.md
SpaceDementia/docs/: README.md
SpaceDementia/src/: README.md  asset_loader.py  background.py  boss.py  bullet.py  config.py  enemy.py  explosion.py  game.py  main.py  menu.py  name_entry.py  obstaculo.py  player.py  rutas.py  scoreboard.py  sound.py  tienda.py  worlds.py
SpaceDementia/tests/: README.md  test_scoreboard.py  test_worlds.py
